# DJZ-XTTS

./: DJZ_XTTS_v1.py  README.md  __init__.py  pyproject.toml
example-workflow/: EXAMPLE-XTTS-v2.json
